--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   "type": "project",
   "require-dev": {
      "php": ">=5.3.0",
-     "phpunit/phpunit": "3.7.*"
+     "phpunit/phpunit": "3.7.*",
+     "satooshi/php-coveralls": "dev-master"
   },
   "autoload": {
     "classmap": [],
