--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "classmap": [],
     "psr-4": {
       "point\\core\\": "src/"
-    }
+    },
+    "files": ["src/Autoloader.php"]
   },
   "authors": [
     {
