--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   "require-dev": {
      "php": ">=5.3.0",
      "phpunit/phpunit": "3.7.*",
-     "satooshi/php-coveralls": "dev-master"
+     "satooshi/php-coveralls": "dev-master",
+     "codeclimate/php-test-reporter": "dev-master"
   },
   "autoload": {
     "classmap": [],
