--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "require-dev": {
      "php": ">=5.3.0",
      "phpunit/phpunit": "3.7.*",
-     "codeclimate/php-test-reporter": "dev-master"
+     "satooshi/php-coveralls": "dev-master"
   },
   "autoload": {
     "classmap": [],
