--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
  - phpunit --configuration ./test/phpunit.xml --coverage-clover build/logs/clover.xml
 
 after_script:
- - php vendor/bin/coveralls -v
+ - php vendor/bin/coveralls
