--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
 script:
  - mkdir -p build/logs
  - phpunit --configuration ./test/phpunit.xml --coverage-clover build/logs/clover.xml
+ - php vendor/bin/phpunit -c ./test/phpunit.xml
 
 after_script:
- - php vendor/bin/coveralls
+ - php vendor/bin/coveralls -v
