--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,16 @@ php:
 env:
 
 before_script:
+ - curl http://cs.sensiolabs.org/get/php-cs-fixer.phar -o php-cs-fixer.phar
  - curl -s http://getcomposer.org/installer | php
- - php composer.phar install --dev --no-interaction
+ - php composer.phar install --dev --no-interaction --prefer-source
 
 script:
  - mkdir -p build/logs
- - phpunit --configuration ./test/phpunit.xml --coverage-clover build/logs/clover.xml
+ - php vendor/bin/phpcs --report=checkstyle --report-file=build/logs/checkstyle.xml --standard=build/config/phpcs.xml --ignore=config.php src
  - php vendor/bin/phpunit -c ./test/phpunit.xml
 
 after_script:
- - php vendor/bin/coveralls -v
+ - curl -s https://gist.github.com/satooshi/4958909/raw > travis/checkstyle.php
+ - php travis/checkstyle.php
+ - php vendor/bin/coveralls -v --exclude-no-stmt
