--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "samejack/point-core",
   "description": "PHP IoC/DI Container Framework",
-  "keywords": ["framework", "point-core", "php", "IoC/DI"],
+  "keywords": ["framework", "point-core", "php", "IoC", "DI"],
   "license": "Apache-2.0",
   "type": "library",
   "authors": [
