fix CI pipleline command

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ script:
  - phpunit --configuration ./test/phpunit.xml --coverage-clover build/logs/clover.xml
 
 after_script:
- - php vendor/bin/coveralls -v --exclude-no-stmt
+ - php vendor/bin/php-coveralls -v --exclude-no-stmt
